@@ -179,9 +179,6 @@ void PanelManager::slotCloseTab() {
    _stack->removeWidget( oldp );
    deletePanel( oldp );
 
-   if( ACTIVE_PANEL == oldp )
-     ACTIVE_PANEL = _self;
-
    // setup pointers
    _self->otherPanel = _other;
    _other->otherPanel = _self;
@@ -321,6 +318,9 @@ void PanelManager::refreshAllTabs( bool invalidate ) {
 }
 
 void PanelManager::deletePanel( ListPanel * p ) {
+  if( ACTIVE_PANEL == p )
+     ACTIVE_PANEL = _self;
+
   if( p && p->func && p->func->files() && !p->func->files()->vfs_canDelete() ) {
     connect( p->func->files(), SIGNAL( deleteAllowed() ), p, SLOT( deleteLater() ) );
     p->func->files()->vfs_requestDelete();
