@@ -1,6 +1,7 @@
     ADDED: Brief view
     ADDED: GUI for configuring the atomic extensions in Konfigurator
 
+    FIXED: Valgrind: Invalid Read at switching to a panel profile
     FIXED: [ 1631578 ] Config error (caused by italian handbook)
     FIXED: Problems with zip file names containing '[' character
     FIXED: Autoconfigure doesn't tell that packing is enabled by 7z
